// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/slider/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ant-slider"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="visibility:visible;left:0%;width:30%;"
    />
    <div
      class="ant-slider-step"
    />
    <div
      class="ant-slider-handle"
      style="left:30%;"
    />
    <div
      class="ant-slider-mark"
    />
  </div>
  <div
    class="ant-slider"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track ant-slider-track-1"
      style="visibility:visible;left:20%;width:30%;"
    />
    <div
      class="ant-slider-step"
    />
    <div
      class="ant-slider-handle ant-slider-handle-1"
      style="left:20%;"
    />
    <div
      class="ant-slider-handle ant-slider-handle-2"
      style="left:50%;"
    />
    <div
      class="ant-slider-mark"
    />
  </div>
  Disabled: 
  <span
    class="ant-switch-small ant-switch"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
</div>
`;

exports[`renders ./components/slider/demo/event.md correctly 1`] = `
<div>
  <div
    class="ant-slider"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="visibility:visible;left:0%;width:30%;"
    />
    <div
      class="ant-slider-step"
    />
    <div
      class="ant-slider-handle"
      style="left:30%;"
    />
    <div
      class="ant-slider-mark"
    />
  </div>
  <div
    class="ant-slider"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track ant-slider-track-1"
      style="visibility:visible;left:20%;width:30%;"
    />
    <div
      class="ant-slider-step"
    />
    <div
      class="ant-slider-handle ant-slider-handle-1"
      style="left:20%;"
    />
    <div
      class="ant-slider-handle ant-slider-handle-2"
      style="left:50%;"
    />
    <div
      class="ant-slider-mark"
    />
  </div>
</div>
`;

exports[`renders ./components/slider/demo/icon-slider.md correctly 1`] = `
<div
  class="icon-wrapper"
>
  <i
    class="anticon anticon-frown-o anticon-highlight"
  />
  <div
    class="ant-slider"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="visibility:visible;left:0%;width:0%;"
    />
    <div
      class="ant-slider-step"
    />
    <div
      class="ant-slider-handle"
      style="left:0%;"
    />
    <div
      class="ant-slider-mark"
    />
  </div>
  <i
    class="anticon anticon-smile-o"
  />
</div>
`;

exports[`renders ./components/slider/demo/input-number.md correctly 1`] = `
<div>
  <div
    class="ant-row"
  >
    <div
      class="ant-col-12"
    >
      <div
        class="ant-slider"
      >
        <div
          class="ant-slider-rail"
        />
        <div
          class="ant-slider-track"
          style="visibility:visible;left:0%;width:0%;"
        />
        <div
          class="ant-slider-step"
        />
        <div
          class="ant-slider-handle"
          style="left:0%;"
        />
        <div
          class="ant-slider-mark"
        />
      </div>
    </div>
    <div
      class="ant-col-4"
    >
      <div
        class="ant-input-number"
        style="margin-left:16px;"
      >
        <div
          class="ant-input-number-handler-wrap"
        >
          <span
            aria-disabled="false"
            aria-label="Increase Value"
            class="ant-input-number-handler ant-input-number-handler-up "
            role="button"
            unselectable="unselectable"
          >
            <span
              class="ant-input-number-handler-up-inner"
              unselectable="unselectable"
            />
          </span>
          <span
            aria-disabled="true"
            aria-label="Decrease Value"
            class="ant-input-number-handler ant-input-number-handler-down ant-input-number-handler-down-disabled"
            role="button"
            unselectable="unselectable"
          >
            <span
              class="ant-input-number-handler-down-inner"
              unselectable="unselectable"
            />
          </span>
        </div>
        <div
          aria-valuemax="20"
          aria-valuemin="1"
          aria-valuenow="1"
          class="ant-input-number-input-wrap"
          role="spinbutton"
        >
          <input
            autocomplete="off"
            class="ant-input-number-input"
            max="20"
            min="1"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row"
  >
    <div
      class="ant-col-12"
    >
      <div
        class="ant-slider"
      >
        <div
          class="ant-slider-rail"
        />
        <div
          class="ant-slider-track"
          style="visibility:visible;left:0%;width:0%;"
        />
        <div
          class="ant-slider-step"
        />
        <div
          class="ant-slider-handle"
          style="left:0%;"
        />
        <div
          class="ant-slider-mark"
        />
      </div>
    </div>
    <div
      class="ant-col-4"
    >
      <div
        class="ant-input-number"
        style="margin-left:16px;"
      >
        <div
          class="ant-input-number-handler-wrap"
        >
          <span
            aria-disabled="false"
            aria-label="Increase Value"
            class="ant-input-number-handler ant-input-number-handler-up "
            role="button"
            unselectable="unselectable"
          >
            <span
              class="ant-input-number-handler-up-inner"
              unselectable="unselectable"
            />
          </span>
          <span
            aria-disabled="false"
            aria-label="Decrease Value"
            class="ant-input-number-handler ant-input-number-handler-down "
            role="button"
            unselectable="unselectable"
          >
            <span
              class="ant-input-number-handler-down-inner"
              unselectable="unselectable"
            />
          </span>
        </div>
        <div
          aria-valuemax="1"
          aria-valuemin="0"
          aria-valuenow="0"
          class="ant-input-number-input-wrap"
          role="spinbutton"
        >
          <input
            autocomplete="off"
            class="ant-input-number-input"
            max="1"
            min="0"
            value="0.00"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/slider/demo/mark.md correctly 1`] = `
<div>
  <h4>
    included=true
  </h4>
  <div
    class="ant-slider ant-slider-with-marks"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="visibility:visible;left:0%;width:37%;"
    />
    <div
      class="ant-slider-step"
    >
      <span
        class="ant-slider-dot ant-slider-dot-active"
        style="left:0%;"
      />
      <span
        class="ant-slider-dot ant-slider-dot-active"
        style="left:26%;"
      />
      <span
        class="ant-slider-dot ant-slider-dot-active"
        style="left:37%;"
      />
      <span
        class="ant-slider-dot"
        style="left:100%;"
      />
    </div>
    <div
      class="ant-slider-handle"
      style="left:37%;"
    />
    <div
      class="ant-slider-mark"
    >
      <span
        class="ant-slider-mark-text ant-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:0%;"
      >
        0°C
      </span>
      <span
        class="ant-slider-mark-text ant-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:26%;"
      >
        26°C
      </span>
      <span
        class="ant-slider-mark-text ant-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:37%;"
      >
        37°C
      </span>
      <span
        class="ant-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:100%;color:#f50;"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>
  <div
    class="ant-slider ant-slider-with-marks"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track ant-slider-track-1"
      style="visibility:visible;left:26%;width:11%;"
    />
    <div
      class="ant-slider-step"
    >
      <span
        class="ant-slider-dot"
        style="left:0%;"
      />
      <span
        class="ant-slider-dot ant-slider-dot-active"
        style="left:26%;"
      />
      <span
        class="ant-slider-dot ant-slider-dot-active"
        style="left:37%;"
      />
      <span
        class="ant-slider-dot"
        style="left:100%;"
      />
    </div>
    <div
      class="ant-slider-handle ant-slider-handle-1"
      style="left:26%;"
    />
    <div
      class="ant-slider-handle ant-slider-handle-2"
      style="left:37%;"
    />
    <div
      class="ant-slider-mark"
    >
      <span
        class="ant-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:0%;"
      >
        0°C
      </span>
      <span
        class="ant-slider-mark-text ant-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:26%;"
      >
        26°C
      </span>
      <span
        class="ant-slider-mark-text ant-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:37%;"
      >
        37°C
      </span>
      <span
        class="ant-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:100%;color:#f50;"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>
  <h4>
    included=false
  </h4>
  <div
    class="ant-slider ant-slider-with-marks"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="visibility:hidden;left:0%;width:37%;"
    />
    <div
      class="ant-slider-step"
    >
      <span
        class="ant-slider-dot"
        style="left:0%;"
      />
      <span
        class="ant-slider-dot"
        style="left:26%;"
      />
      <span
        class="ant-slider-dot ant-slider-dot-active"
        style="left:37%;"
      />
      <span
        class="ant-slider-dot"
        style="left:100%;"
      />
    </div>
    <div
      class="ant-slider-handle"
      style="left:37%;"
    />
    <div
      class="ant-slider-mark"
    >
      <span
        class="ant-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:0%;"
      >
        0°C
      </span>
      <span
        class="ant-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:26%;"
      >
        26°C
      </span>
      <span
        class="ant-slider-mark-text ant-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:37%;"
      >
        37°C
      </span>
      <span
        class="ant-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:100%;color:#f50;"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>
  <h4>
    marks & step
  </h4>
  <div
    class="ant-slider ant-slider-with-marks"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="visibility:visible;left:0%;width:37%;"
    />
    <div
      class="ant-slider-step"
    >
      <span
        class="ant-slider-dot ant-slider-dot-active"
        style="left:0%;"
      />
      <span
        class="ant-slider-dot ant-slider-dot-active"
        style="left:26%;"
      />
      <span
        class="ant-slider-dot ant-slider-dot-active"
        style="left:37%;"
      />
      <span
        class="ant-slider-dot"
        style="left:100%;"
      />
    </div>
    <div
      class="ant-slider-handle"
      style="left:37%;"
    />
    <div
      class="ant-slider-mark"
    >
      <span
        class="ant-slider-mark-text ant-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:0%;"
      >
        0°C
      </span>
      <span
        class="ant-slider-mark-text ant-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:26%;"
      >
        26°C
      </span>
      <span
        class="ant-slider-mark-text ant-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:37%;"
      >
        37°C
      </span>
      <span
        class="ant-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:100%;color:#f50;"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>
  <h4>
    step=null
  </h4>
  <div
    class="ant-slider ant-slider-with-marks"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="visibility:visible;left:0%;width:37%;"
    />
    <div
      class="ant-slider-step"
    >
      <span
        class="ant-slider-dot ant-slider-dot-active"
        style="left:0%;"
      />
      <span
        class="ant-slider-dot ant-slider-dot-active"
        style="left:26%;"
      />
      <span
        class="ant-slider-dot ant-slider-dot-active"
        style="left:37%;"
      />
      <span
        class="ant-slider-dot"
        style="left:100%;"
      />
    </div>
    <div
      class="ant-slider-handle"
      style="left:37%;"
    />
    <div
      class="ant-slider-mark"
    >
      <span
        class="ant-slider-mark-text ant-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:0%;"
      >
        0°C
      </span>
      <span
        class="ant-slider-mark-text ant-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:26%;"
      >
        26°C
      </span>
      <span
        class="ant-slider-mark-text ant-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:37%;"
      >
        37°C
      </span>
      <span
        class="ant-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:100%;color:#f50;"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/slider/demo/tip-formatter.md correctly 1`] = `
<div>
  <div
    class="ant-slider"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="visibility:visible;left:0%;width:0%;"
    />
    <div
      class="ant-slider-step"
    />
    <div
      class="ant-slider-handle"
      style="left:0%;"
    />
    <div
      class="ant-slider-mark"
    />
  </div>
  <div
    class="ant-slider"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="visibility:visible;left:0%;width:0%;"
    />
    <div
      class="ant-slider-step"
    />
    <div
      class="ant-slider-handle"
      style="left:0%;"
    />
    <div
      class="ant-slider-mark"
    />
  </div>
</div>
`;

exports[`renders ./components/slider/demo/vertical.md correctly 1`] = `
<div
  style="height:300px;"
>
  <div
    style="float:left;height:300px;margin-left:70px;"
  >
    <div
      class="ant-slider ant-slider-vertical"
    >
      <div
        class="ant-slider-rail"
      />
      <div
        class="ant-slider-track"
        style="visibility:visible;bottom:0%;height:30%;"
      />
      <div
        class="ant-slider-step"
      />
      <div
        class="ant-slider-handle"
        style="bottom:30%;"
      />
      <div
        class="ant-slider-mark"
      />
    </div>
  </div>
  <div
    style="float:left;height:300px;margin-left:70px;"
  >
    <div
      class="ant-slider ant-slider-vertical"
    >
      <div
        class="ant-slider-rail"
      />
      <div
        class="ant-slider-track ant-slider-track-1"
        style="visibility:visible;bottom:20%;height:30%;"
      />
      <div
        class="ant-slider-step"
      />
      <div
        class="ant-slider-handle ant-slider-handle-1"
        style="bottom:20%;"
      />
      <div
        class="ant-slider-handle ant-slider-handle-2"
        style="bottom:50%;"
      />
      <div
        class="ant-slider-mark"
      />
    </div>
  </div>
  <div
    style="float:left;height:300px;margin-left:70px;"
  >
    <div
      class="ant-slider ant-slider-with-marks ant-slider-vertical"
    >
      <div
        class="ant-slider-rail"
      />
      <div
        class="ant-slider-track ant-slider-track-1"
        style="visibility:visible;bottom:26%;height:11%;"
      />
      <div
        class="ant-slider-step"
      >
        <span
          class="ant-slider-dot"
          style="bottom:0%;"
        />
        <span
          class="ant-slider-dot ant-slider-dot-active"
          style="bottom:26%;"
        />
        <span
          class="ant-slider-dot ant-slider-dot-active"
          style="bottom:37%;"
        />
        <span
          class="ant-slider-dot"
          style="bottom:100%;"
        />
      </div>
      <div
        class="ant-slider-handle ant-slider-handle-1"
        style="bottom:26%;"
      />
      <div
        class="ant-slider-handle ant-slider-handle-2"
        style="bottom:37%;"
      />
      <div
        class="ant-slider-mark"
      >
        <span
          class="ant-slider-mark-text"
          style="margin-bottom:-50%;bottom:0%;"
        >
          0°C
        </span>
        <span
          class="ant-slider-mark-text ant-slider-mark-text-active"
          style="margin-bottom:-50%;bottom:26%;"
        >
          26°C
        </span>
        <span
          class="ant-slider-mark-text ant-slider-mark-text-active"
          style="margin-bottom:-50%;bottom:37%;"
        >
          37°C
        </span>
        <span
          class="ant-slider-mark-text"
          style="margin-bottom:-50%;bottom:100%;color:#f50;"
        >
          <strong>
            100°C
          </strong>
        </span>
      </div>
    </div>
  </div>
</div>
`;
